--- a/config/json_files/training_config_config.json
+++ b/config/json_files/training_config_config.json
@@ -1,7 +1,7 @@
 {
   "validation_split": 0.2,
-  "network_type": "AE",
-  "dataset_type": "texture_1",
+  "network_type": "DAEE",
+  "dataset_type": "cpu",
   "epochs": 200,
   "batch_size": 128,
   "learning_rate": 2e-4,
